k8s/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: nginx-strict-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: nginx
  mtls:
    mode: STRICT
