k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-fastapi-postgresql
  namespace: dev
spec:
  selector:
    matchLabels:
      app: python-fastapi-postgresql
  template:
    metadata:
      labels:
        app: python-fastapi-postgresql
    spec:
      serviceAccountName: python-fastapi-postgresql-sa
      containers:
        - name: python-fastapi-postgresql
          image: gcr.io/open-source-apps-001/python-fastapi-postgresql:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: python-app-data
