k8s/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: dev2
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
