k8s/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external-http
  namespace: dev
spec:
  # Specify an existing GatewayClass.
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    # Listen for HTTP traffic on port 80.
    - name: http
      protocol: HTTP
      port: 80
